[gd_scene load_steps=12 format=2]

[ext_resource path="res://Enemys/GroundEnemy.gd" type="Script" id=1]
[ext_resource path="res://Enemys/Enemies.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 6, 7 )

[sub_resource type="Animation" id=5]
resource_name = "Hide"
step = 0.0166667
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Rect2( 64, 16, 32, 16 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -16 ) ]
}

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Rect2( 96, 16, 32, 32 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -8 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 0.219608, 0.219608, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "walk"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Rect2( 96, 16, 32, 32 ), Rect2( 64, 16, 32, 32 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -8 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "Damage"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0.368627, 0.368627, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0.368627, 0.368627, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0.368627, 0.368627, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "onLoad"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 8, 3 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 6, 7 )

[node name="GroundEnemy" type="KinematicBody2D" groups=["Living"]]
collision_layer = 4
script = ExtResource( 1 )

[node name="DetectGround" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1 )
shape = SubResource( 3 )
disabled = true

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
offset = Vector2( 0, -8 )
region_enabled = true
region_rect = Rect2( 96, 16, 32, 32 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Hide"
anims/Hide = SubResource( 5 )
anims/RESET = SubResource( 1 )
anims/walk = SubResource( 2 )

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
autoplay = "onLoad"
anims/Damage = SubResource( 6 )
anims/RESET = SubResource( 7 )
anims/onLoad = SubResource( 8 )

[node name="Detector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="DetectPlayer" type="CollisionShape2D" parent="Detector"]
position = Vector2( 0, -13 )
shape = SubResource( 4 )

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( 6, -4 )
enabled = true
cast_to = Vector2( 6, 0 )

[node name="Player" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="HurtPlayer" type="CollisionShape2D" parent="Player"]
position = Vector2( 0, 1 )
shape = SubResource( 9 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.25

[connection signal="body_exited" from="Detector" to="." method="_on_Detector_body_exited"]
[connection signal="body_entered" from="Player" to="." method="_on_Player_body_entered"]
